# table-oriented-rpa

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: db_example.xlsx  sqlite.db
docs/: CUSTOMIZING_WORKFLOWS.md  GUI_AUTOMATION.md
docs/examples/: api_usage.py  gui_workflow_example.py
docs/examples/gui_workflows/: README.md  complete_workflow.yaml  gmail_send_email.yaml  gmail_to_word.yaml  gmail_to_word_copy.yaml
examples/: api_usage.py  gui_workflow_example.py
examples/gui_workflows/: README.md  gmail_to_word.yaml  outlook_to_word.yaml
rpa_table_robot/: __init__.py  classifier.py  config.py  exceptions.py  exporter.py  llm.py  models.py  ocr_client.py  parser.py  report.py  robot.py  topic_routing.py
rpa_table_robot/gui_automation/: __init__.py  builtin_actions.py  config.py  exceptions.py  rpa_context.py  workflow_engine.py  yaml_loader.py
sidecar/: Dockerfile.cpu  Dockerfile.gpu  requirements-cpu.txt  requirements-gpu.txt
sidecar/ocr_service/: __init__.py  app.py
tests/: create_test_bd.py  test_gui_actions_playwright.py  test_parser.py  test_report.py  test_robot.py  test_route_and_send_action.py  test_sidecar_smoke.py  test_topic_routing.py
