[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpa-table-robot"
version = "0.1.0"
description = "Python API for recognizing tables from images with a PaddleOCR sidecar and optional LLM reports."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "lxml>=5.2",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pillow>=10.4",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "playwright>=1.54",
    "transformers>=4.44",
    "torch>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.setuptools.packages.find]
include = ["rpa_table_robot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
